--- a/src/Macaw/Macaw.fsproj
+++ b/src/Macaw/Macaw.fsproj
@@ -5,9 +5,12 @@
   <ItemGroup>
     <Compile Include="Types.fs" />
     <Compile Include="Http.fs" />
+    <Compile Include="Router.fs" />
+    <Compile Include="Logger.fs" />
+    <Compile Include="Errors.fs" />
     <Compile Include="Session.fs" />
     <Compile Include="Auth\*.fs" />
-    <Compile Include="Middlewares.fs" />
+    <Compile Include="Middleware.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.1.*" />
@@ -17,8 +20,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" Version="1.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="1.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="1.0.*" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.*" />
   </ItemGroup>
 </Project>
